# minecraft_management_console

./: .gitignore  Cargo.toml  Rocket.toml  cache.txt  death.py  mc_server_manager.json  password_list.txt
src/: console.rs  login.rs  main.rs  manageserver.rs
src/minecraft_manager/: Cargo.toml  cache.txt
src/minecraft_manager/src/: lib.rs  server.rs
src/password_lib/: Cargo.toml
src/password_lib/src/: lib.rs
templates/: authed.html.tera  base.html.tera  console.html.tera  created.html.tera  login.html.tera  registered.html.tera
templates/css/: authed.css  base.css  console.css
templates/js/: console.js  getupdated_verisons.js
